--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
+    "styled-components": "^5.3.9",
     "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
